<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/eight_dips"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dips"
            android:layout_weight="1"
            android:text="@string/book_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/book_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dips"
            android:layout_weight="2"
            android:drawableEnd="@drawable/book_icon_black"
            android:hint="@string/book_name_hint"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dips"
            android:layout_weight="1"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/price_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dips"
            android:layout_weight="2"
            android:drawableEnd="@drawable/rupee_icon"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dips"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/quantity_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dips"
            android:layout_weight="2"
            android:drawableEnd="@drawable/stock_icon"
            android:hint="@string/quantity_hint"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dips"
            android:layout_weight="1"
            android:text="@string/supplier_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/supplier_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dips"
            android:layout_weight="2"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/supplier_hint"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dips"
            android:layout_weight="1"
            android:text="@string/supplier_phone_no"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/supplier_phone_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dips"
            android:layout_weight="2"
            android:drawableEnd="@drawable/ic_contact_phone"
            android:hint="@string/supplier_phone_hint"
            android:inputType="phone|numberDecimal" />

    </LinearLayout>

</LinearLayout>